--- a/PRO-UI/src/app/components/alugar/alugar-list/alugar-list.component.html
+++ b/PRO-UI/src/app/components/alugar/alugar-list/alugar-list.component.html
@@ -66,8 +66,7 @@
             <td mat-cell *matCellDef="let element">
 
                <a routerLink="delete/{{ element.id }}">
-                  <i class="material-icons delete" title="Cancelar reserva"
-                     *ngIf="element.veiculo.status == 'RESERVADO'">delete</i>
+                  <i class="material-icons delete" title="Cancelar reserva">delete</i>
                </a>
 
             </td>
